// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component renders properly 1`] = `
<div
  className="modal__overlay"
  onClick={[Function]}
  role="dialog"
>
  <div
    className="modal__container"
  >
    <header
      className="modal__header"
    >
      <button
        className="linkButton modal__dismiss"
        onClick={[Function]}
      >
        <svg
          className="icon"
          height="0.75rem"
          width="0.75rem"
        >
          <use
            xlinkHref="#id"
          />
        </svg>
      </button>
    </header>
    <div
      className="modal__body"
    />
  </div>
</div>
`;

exports[`Modal component renders with children 1`] = `
<div
  className="modal__overlay"
  onClick={[Function]}
  role="dialog"
>
  <div
    className="modal__container"
  >
    <header
      className="modal__header"
    >
      <button
        className="linkButton modal__dismiss"
        onClick={[Function]}
      >
        <svg
          className="icon"
          height="0.75rem"
          width="0.75rem"
        >
          <use
            xlinkHref="#id"
          />
        </svg>
      </button>
    </header>
    <div
      className="modal__body"
    >
      I’m a child element!
    </div>
  </div>
</div>
`;
